# csv-comparator

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/compare/: cli.py  compare.py
src/cpc/: __main__.py  compare.py  match.py
src/cpc/utils/: terminal.py
src/csv-comparator/: __main__.py  cli.py  match.py
